Fix bug #1: java 11 does not have ".toList()" method.